# lsimons-agent

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: build.yml  ci.yml
docs/: IMPLEMENTATION_PLAN.md  PHASE7_LOG.md  SPECS.md
scripts/: build_icons.py
