[project]
name = "lsimons-agent-workspace"
version = "0.1.0"
description = "Custom CLI coding agent workspace"
requires-python = ">=3.13"

[dependency-groups]
dev = ["ruff", "pytest", "pyinstaller", "pillow", "pyright>=1.1.390"]

[tool.uv.workspace]
members = ["packages/lsimons-agent", "packages/mock-llm-server", "packages/lsimons-agent-web"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["packages/lsimons-agent/tests", "packages/lsimons-agent-web/tests"]
